Fix vlc media player launch with spaces